# Bulme_Regelungstechnik

./: .gitignore  ACKNOWLEDGMENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_signal.py  example_signal.py  example_strecke.py  main.py  signal.py  strecke.py  totzeit.py
notebooks/: notebook_1.py
notebooks/__marimo__/session/: notebook_1.py.json  test.py.json
notebooks/examples/: 01_grundlagen.py  02_pt_strecken.py  03_regler.py  04_totzeit.py
notebooks/examples/__marimo__/session/: 01_grundlagen.py.json  02_pt_strecken.py.json  03_regler.py.json  04_totzeit.py.json  test.py.json
report/figures/: .gitignore
src/regelung/: __init__.py
src/regelung/regler/: __init__.py  control.py
src/regelung/simulation/: __init__.py  core.py  plot.py  simulation.py
src/regelung/strecken/: __init__.py  diff.py  int.py  pt.py  totzeit.py
tests/: test_regler.py  test_simulation.py  test_strecken.py
